# Table-Detection-Binarization-

./: CMakeLists.txt  binarization.cpp  binarization_RGB.cpp  predict_boxes.cpp
